[metadata]
url = https://github.com/datalad/datalad-metalad
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension for semantic metadata handling
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.5
install_requires =
    six
    # uncomment this when datalad is released without metadata code in core: datalad >=0.17.x
    datalad-metadata-model >=0.3.5,<0.4.0
    pyyaml
test_requires =
    coverage
    pytest
    pytest-cov
packages = find_namespace:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = datalad_metalad/_version.py
versionfile_build = datalad_metalad/_version.py
tag_prefix =
parentdir_prefix =
