[metadata]
url = https://github.com/datalad/datalad-metalad
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = DataLad extension for semantic metadata handling
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
install_requires =
    dataclasses_json
    datalad >= 0.18
    datalad-metadata-model >=0.3.10
    pyyaml
    six
test_requires =
    coverage
    mypy
    pytest
    pytest-cov
packages = find_namespace:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = datalad_metalad/_version.py
versionfile_build = datalad_metalad/_version.py
tag_prefix =
parentdir_prefix =
